--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,10 @@
-User.create!(name:  "管理者",
-             email: "email@sample.com",
-             password:              "password",
-             password_confirmation: "password",
-             admin: true)
+<% provide(:title, '一覧') %>
+<h1>ユーザ一覧</h1>
 
-59.times do |n|
-  name  = Faker::Name.name
-  email = "email#{n+1}@sample.com"
-  password = "password"
-  User.create!(name:  name,
-               email: email,
-               password:              password,
-               password_confirmation: password)
-end
+<%= will_paginate %>
+
+<ul class="users" >
+ <%= render @users %>
+</ul>
+
+<%= will_paginate %>     
