--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -64,6 +64,8 @@
       <td>
         <% if day.started_at.present? && day.finished_at.present? %>
          <%= working_times(day.started_at, day.finished_at) %>
+         <% seconds = (day.finished_at - day.started_at).to_i %>
+         <% @total_seconds = @total_seconds.to_i + seconds %>
         <% end %>
       </td>
       <td></td>
@@ -71,13 +73,12 @@
   <% end %>
 </tbody>
  
-  <!--!注意！この位置に</table>タグがあるはずです、削除してください-->
-<!--!注意！この位置に</div>タグがあるはずです、これも削除してください-->
+ </tbody>
     <tfoot>
       <tr>
-        <td colspan = "2">総合勤務時間</td>
+        <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
         <td colspan = "6"></td>
-        <td>在社時間合計</td>
+        <td><%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
         <td></td>
       </tr>
     </tfoot>
