--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title,"勤怠編集" ) %>
 <div>
   <h1>勤怠編集画面</h1>
+  <%= form_for(@user, url: update_attendances_path, method: :patch) do |f| %>
   <table class = "table-bordered table-striped table-condensed">
     <thead>
       <tr>
@@ -25,4 +26,11 @@
       <% end %>
     </tbody>
   </table>
+   <div class="btn-attendances-update">
+   <%= f.submit "更新", class: "btn btn-primary" %>
+   <%= link_to "キャンセル", user_path(@user, params:{first_day: @first_day }), class: "btn btn-default btn-block" %>
+   </div>
+<% end %>
 </div>
+
+
